--- a/demo/main.css
+++ b/demo/main.css
@@ -87,9 +87,18 @@ pinkx, imgChunk, group, item {
 /* COVER */
 
 #cover {
+  position: relative;
   background-color: #BDBDBD;
   width: 512px;
   height: 748px;
+}
+#cover .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
 
 /* CONTENT */
