--- a/css/1.css
+++ b/css/1.css
@@ -17,160 +17,167 @@ pinkx, imgChunk, group, item {
 */
 
 #pinkx {
-    position: relative;
-    width: 1000px;
-    box-sizing: border-box;
-    z-index: 0;
-    left: -120px;
-    color:rgb(30,30,30);
-    font-family: sans-serif;
+  position: relative;
+  width: 1000px;
+  box-sizing: border-box;
+  z-index: 0;
+  left: -120px;
+  color:rgb(30,30,30);
+  font-family: sans-serif;
 
-    border-color: rgba(0,0,0,0.3);
-    border-style: double;
-    border-width: 4px;
+  border-color: rgba(0,0,0,0.3);
+  border-style: double;
+  border-width: 4px;
 
-    background-color: rgb(253,253,253);
-    background-image: linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff),
-    linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
-    background-size: 60px 60px;
-    background-position: 0 0, 30px 30px;
+  background-color: rgb(253,253,253);
+  background-image: linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff),
+  linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
+  background-size: 60px 60px;
+  background-position: 0 0, 30px 30px;
 }
 
-#title, #cover, #content, #links, #state{
-    position: relative;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0px;
-    left: 0px;
+#title, #cover, #content, #links, #state {
+  position: relative;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0px;
+  left: 0px;
 }
 
-#cover, #content, #links, #state{
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 0;
+#cover, #content, #links, #state {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0;
 }
-#content, #links, #state{
-    width: 900px;
+#content, #links, #state {
+  width: 900px;
 }
 
-item{
-    display: inline-block;
-    font-size: 16px;
-    padding-top: 20px;
+item {
+  display: inline-block;
+  font-size: 16px;
+  padding-top: 20px;
 }
-group{
-    padding-bottom: 15px;
-    padding-top: 15px;
-    background: white;
+group {
+  padding-bottom: 15px;
+  padding-top: 15px;
+  background: white;
 }
 
 /* TITLE */
-#title{
-    padding-top: 50px;
-    height: 150px;
-    line-height: 30px;
+#title {
+  padding-top: 50px;
+  height: 150px;
+  line-height: 30px;
 }
-#title *{
-    padding-top: 0;
-    margin-top: 0;
+#title * {
+  padding-top: 0;
+  margin-top: 0;
 }
-#title h1, #title h5{
-    display: inline-block;
-    font-weight: bolder;
+#title h1, #title h5 {
+  display: inline-block;
+  font-weight: bolder;
 
 }
-#title h1{
-    font-size: 60px;
+#title h1 {
+  font-size: 60px;
 }
-#title h5{
-    font-size: 35px;
-    margin-left: 5px;
+#title h5 {
+  font-size: 35px;
+  margin-left: 5px;
 }
-#title p{
-    font-size: 25px;
-    margin-top: 5px;
+#title p {
+  font-size: 25px;
+  margin-top: 5px;
 }
 
 /* Poster */
 
-#cover{
-    width: 850px;
-    height: 478px; /* 16:9 */
-    margin-top: 10px;
-    border: 1px solid black;
+#cover {
+  width: 850px;
+  height: 478px; /* 16:9 */
+  margin-top: 10px;
+  border: 1px solid black;
+  padding: 0;
+}
+
+#cover .img {
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 /* Content */
 
-#content{
-    margin-top: 30px;
-    line-height: 25px;
+#content {
+  margin-top: 30px;
+  line-height: 25px;
 }
 
-#content h3, #links h3{
-    font-size: 23px;
-    /*background: rgba(30,30,30,0.2);*/
-    padding: 3px;
-    -webkit-text-stroke:.5px white;
-    border-bottom: 1px solid rgba(30,30,30,0.4);
+#content h3, #links h3 {
+  font-size: 23px;
+  /*background: rgba(30,30,30,0.2);*/
+  padding: 3px;
+  -webkit-text-stroke:.5px white;
+  border-bottom: 1px solid rgba(30,30,30,0.4);
 }
-#content h3::after, #links h3::after{
-    content: "<<<";
-    letter-spacing: 2px;
-    margin-left: 10px;
+#content h3::after, #links h3::after {
+  content: "<<<";
+  letter-spacing: 2px;
+  margin-left: 10px;
 }
 
-.item{
-    display: inline-block;
-    text-decoration: none;
-    color: black;
-    margin-left: 20px;
-    line-height: 10px;
+.item {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  margin-left: 20px;
+  line-height: 10px;
 }
-.item span{
-    float: left;
+.item span {
+  float: left;
 }
-.name{
-    text-shadow: 0px 0px 1px rgba(0,0,0,0.3);
+.name {
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.3);
 }
-.org{
-    font-size: 13px;
+.org {
+  font-size: 13px;
 }
-.job::after{
-    content: "：";
+.job::after {
+  content: "：";
 }
-.org::before{
-    content: "「";
+.org::before {
+  content: "「";
 }
-.org::after{
-    content: "」";
+.org::after {
+  content: "」";
 }
 
 /* Links */
 
-#links{
-    font-size: 15px;
-    line-height: 22px;
-    z-index: 10;
-    margin-top: -5px;
+#links {
+  font-size: 15px;
+  line-height: 22px;
+  z-index: 10;
+  margin-top: -5px;
 }
-#links item{
-    margin-left: 20px;
-    padding: 3px;
-    margin-top: 10px;
-    transform: perspective(1px) translateZ(0);
-    transition-property: color;
-    transition-duration: .3s;
+#links item {
+  margin-left: 20px;
+  padding: 3px;
+  margin-top: 10px;
+  transform: perspective(1px) translateZ(0);
+  transition-property: color;
+  transition-duration: .3s;
 }
-.other{
-    font-size: 12px;
+.other {
+  font-size: 12px;
 }
-.link{
+.link {
     color: black;
-    text-decoration: none;
+  text-decoration: none;
 }
 
-#links item::before{
+#links item::before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -185,23 +192,23 @@ group{
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
 }
-.link:hover, .link:focus, .link:active, #links item:hover{
+.link:hover, .link:focus, .link:active, #links item:hover {
   color: white;
   /*transition-duration: .3s;*/
 }
-#links item:hover::before, #links item:focus::before, #links item:active::before{
+#links item:hover::before, #links item:focus::before, #links item:active::before {
   transform: scaleX(1);
 }
 
 /* statement */
-#state{
-    line-height: 5px;
-    margin-top: 30px;
+#state {
+  line-height: 5px;
+  margin-top: 30px;
 }
-#state h3{
-    font-size: 15px;
-    padding: 0;
+#state h3 {
+  font-size: 15px;
+  padding: 0;
 }
-#state item{
-    font-size: 13px;
+#state item {
+  font-size: 13px;
 }
